@@ -79,6 +79,26 @@ if(USE_PARDISO)
 endif(USE_PARDISO)
 
 ##################################################################
+# For STRUMPACK
+##################################################################
+if(USE_STRUMPACK)
+
+    # set the path to find specific modules
+    set(STRUMPACK_DIR "${STRUMPACK_DIR}")
+
+    # try to find STRUMPACK
+    find_package(STRUMPACK REQUIRED)
+
+    if (STRUMPACK_FOUND)
+        add_definitions("-DWITH_STRUMPACK=1")
+        include_directories(${STRUMPACK_INCLUDE_DIRS})
+    else(STRUMPACK_FOUND)
+        message("-- WARNING: STRUMPACK was requested but not supported! Continue without it.")
+    endif(STRUMPACK_FOUND)
+
+endif(USE_STRUMPACK)
+
+##################################################################
 # For Doxygen
 ##################################################################
 if(USE_DOXYGEN)
