@@ -1,5 +1,10 @@
 File Name: CHANGES
 
+10/03/2022 FASP 2.8.3:
+- Add STRUMPACK as a direct solver;
+- Wrong solution when used with STRUMPACK_METIS re-ordering;
+- Seems to work using STRUMPACK_NATURAL;
+
 09/26/2022 FASP 2.8.2:
 - Chang default behavoir: Do not require Fortran compilers!!!
 - Do not compile Fortran by default;
